# CUDA_freshman

./: CMakeLists.txt  README.md
01_hello_world/: hello_world.cu
02_vector_add/: CMakeLists.txt  vecadd.cu
03_matrix_multiplication/: CMakeLists.txt  matrix_multiplication.cu
04-reduce/: reduce.cu
04_reduce/: CMakeLists.txt  reduce.cu
05_sum2DMat/: CMakeLists.txt  sum2DMat.cu
06-warp-level-function/: 06_warp_level_func.cu
06_warp_level_function/: CMakeLists.txt  warp_level_func.cu
include/: helper.h
